# ia-local-procadurias

./: README.md  init.sh  lociapro.db  lociapro.db-shm  lociapro.db-wal  main.py  pyproject.toml  security_test.sh
aplicacion/: auth.py  config.py  main.py  pyproject.toml  rag.py
aplicacion/routers/: auth_router.py  consultas.py  gestion.py
back/: demo.py  sueltos.db
back/data/indice_faiss/: index.faiss  index.pkl
back/rag/: buscar.py  ingest.py
back/sqlite/: buscar.py  insertar.py  schema.sql
data/indice_faiss/: index.pkl
datos/: db.py  faiss_service.py  main.py  pyproject.toml
datos/routers/: chats.py  documentos.py  faiss_router.py  procuraduria.py  usuarios.py
front/: app.py
presentacion/: app.py  pyproject.toml
