[project]
name = "lociapro-aplicacion"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "langchain-ollama>=0.1",
    "langchain-core>=0.2",
    "langchain-community>=0.2",
    "python-multipart>=0.0.9",
    "bcrypt>=5.0.0",
]

[project.scripts]
aplicacion = "main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
