[project]
name = "lociapro-datos"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "langchain-community>=0.2",
    "langchain-ollama>=0.1",
    "langchain-text-splitters>=0.2",
    "pypdf>=4.0",
    "faiss-cpu>=1.8",
    "python-multipart>=0.0.9",
]

[project.scripts]
datos = "main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
