[project]
name = "lociapro-presentacion"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35",
    "httpx>=0.27",
    "pandas>=2.0",
]

[project.scripts]
presentacion = "app:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
